docs(state-router): update demo

--- a/packages/@sanity/state-router/demo/tsconfig.json
+++ b/packages/@sanity/state-router/demo/tsconfig.json
@@ -1,8 +1,12 @@
 {
-  "include": ["**/*"],
+  "include": ["**/*.ts", "**/*.tsx"],
   "compilerOptions": {
     "noEmit": true,
     "esModuleInterop": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "../",
+    "paths": {
+      "@sanity/state-router": ["./src"]
+    }
   }
 }
