build(base): add `/form` export

--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -116,6 +116,9 @@
       "field": [
         "./lib/dts/src/_exports/field.d.ts"
       ],
+      "form": [
+        "./lib/dts/_exports/form.d.ts"
+      ],
       "hooks": [
         "./lib/dts/src/_exports/hooks.d.ts"
       ],
