--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "noEmit": true
   },
   "references": [
+    // {"path": "./dev/example-studio"},
+
     {"path": "./packages/@sanity/base"},
     {"path": "./packages/@sanity/block-tools"},
     {"path": "./packages/@sanity/cli"},
