chore: use obscure npm tag for publish task

--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "postinstall": "husky install",
     "prettier": "prettier '**/*.{ts,js,tsx,jsx}'",
     "prettify": "lerna run clean && yarn prettier --write",
-    "publish": "yarn build && lerna publish --exact",
+    "publish": "RELEASE_TAG=purple-unicorn yarn publish-tag",
+    "publish-when-v3-is-ready": "yarn build && lerna publish --exact",
     "publish-canary": "RELEASE_TAG=canary yarn publish-tag",
     "publish-current-branch": "RELEASE_TAG=`git rev-parse --abbrev-ref HEAD | sed 's/\\//\\_/g'` yarn publish-tag",
     "publish-tag": "RELEASE_TAG=\"${RELEASE_TAG:-canary}\"; yarn build && lerna publish --canary --force-publish --no-git-tag-version --dist-tag=$RELEASE_TAG --preid=$RELEASE_TAG --exact",
