--- a/packages/@sanity/cli/.depcheckignore.json
+++ b/packages/@sanity/cli/.depcheckignore.json
@@ -1,4 +1,21 @@
 {
   "//": "these are used by template projects and doesn't need to be project dependencies",
-  "ignore": ["react-icons", "react", "prop-types", "react-barcode", "@sanity/base", "@sanity/ui", "@sanity/icons", "@sanity/form-builder", "styled-components"]
+  "ignore": [
+    "@sanity/base",
+    "@sanity/color",
+    "@sanity/desk-tool",
+    "@sanity/form-builder",
+    "@sanity/icons",
+    "@sanity/types",
+    "@sanity/ui",
+    "@sanity/uuid",
+    "lodash.get",
+    "pluralize",
+    "prop-types",
+    "react-barcode",
+    "react-icons",
+    "react",
+    "slug",
+    "styled-components"
+  ]
 }
