--- a/packages/@sanity/server/package.json
+++ b/packages/@sanity/server/package.json
@@ -39,11 +39,12 @@
     "@vitejs/plugin-react": "^1.1.3",
     "chalk": "^4.1.2",
     "debug": "^3.2.7",
-    "express": "^4.17.1",
     "esbuild-register": "^3.2.0",
+    "express": "^4.17.1",
     "module-alias": "^2.2.2",
     "read-pkg-up": "^7.0.1",
     "resolve-from": "^5.0.0",
+    "resolve.exports": "^1.1.0",
     "vite": "^2.7.2"
   },
   "devDependencies": {
