--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "dev:test-studio": "yarn --cwd dev/test-studio start",
     "dev:workshop": "yarn --cwd dev/workshop dev",
     "eslint": "eslint --ext=.js,.jsx,.mjs,.ts,.tsx --quiet",
-    "exports-check": "lerna run --scope @sanity/* exports-check",
+    "exports:check": "lerna run exports:check",
+    "exports:clean": "lerna run exports:clean",
+    "exports:generate": "lerna run exports:generate",
     "init": "lerna clean --yes && run-s bootstrap build",
     "lint": "yarn eslint .",
     "lint:fix": "eslint . --quiet --fix",
