--- a/packages/@sanity/base/.npmignore
+++ b/packages/@sanity/base/.npmignore
@@ -1,3 +1,11 @@
-src/
-coverage/
-tsconfig.tsbuildinfo
+/.babelrc
+/.depcheckignore.json
+/.eslintignore
+/.eslintrc
+/.idea
+/coverage
+/jest.config.js
+/scripts
+/test
+/tsconfig.json
+/tsconfig.lib.json
