--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -166,7 +166,10 @@
     "build": "../../../bin/pkg-utils transpile --tsconfig tsconfig.lib.json",
     "clean": "rimraf lib",
     "coverage": "jest --coverage",
-    "exports-check": "../../../bin/pkg-utils exports-check",
+    "exports:check": "../../../bin/pkg-utils exports-check",
+    "exports:clean": "../../../bin/pkg-utils exports-clean",
+    "exports:generate": "../../../bin/pkg-utils exports-generate",
+    "postbuild": "run-s exports:generate",
     "prebuild": "yarn clean",
     "prepublishOnly": "node -r esbuild-register scripts/writeRequiredUIVersion.ts",
     "test": "jest",
