--- a/packages/@sanity/desk-tool/package.json
+++ b/packages/@sanity/desk-tool/package.json
@@ -38,9 +38,12 @@
   "scripts": {
     "build": "../../../bin/pkg-utils bundle",
     "clean": "rimraf lib",
+    "exports:check": "../../../bin/pkg-utils exports-check",
+    "exports:clean": "../../../bin/pkg-utils exports-clean",
+    "exports:generate": "../../../bin/pkg-utils exports-generate",
+    "postbuild": "run-s exports:generate",
     "lint": "eslint . --ext .js,.jsx,.mjs,.ts,.tsx --quiet",
     "prebuild": "yarn clean",
-    "exports-check": "../../../bin/pkg-utils exports-check",
     "test": "jest",
     "watch": "../../../bin/pkg-utils bundle --watch"
   },
