--- a/packages/@sanity/imagetool/.npmignore
+++ b/packages/@sanity/imagetool/.npmignore
@@ -1,5 +1,11 @@
-example
-test
-src
-.idea
-tsconfig.tsbuildinfo
+/.babelrc
+/.depcheckignore.json
+/.eslintignore
+/.eslintrc
+/.idea
+/coverage
+/jest.config.js
+/scripts
+/test
+/tsconfig.json
+/tsconfig.lib.json
