--- a/packages/@sanity/schema/.npmignore
+++ b/packages/@sanity/schema/.npmignore
@@ -1,4 +1,14 @@
-src/
-coverage/
-.idea
-tsconfig.tsbuildinfo
+/.babelrc
+/.depcheckignore.json
+/.eslintignore
+/.eslintrc
+/.idea
+/coverage
+/jest.config.js
+/scripts
+/test
+/tsconfig.json
+/tsconfig.lib.json
+
+# custom
+/example
