--- a/packages/@sanity/util/package.json
+++ b/packages/@sanity/util/package.json
@@ -53,6 +53,10 @@
   "scripts": {
     "build": "../../../bin/pkg-utils bundle --target node --tsconfig tsconfig.lib.json",
     "clean": "rimraf lib",
+    "exports:check": "../../../bin/pkg-utils exports-check --target node",
+    "exports:clean": "../../../bin/pkg-utils exports-clean",
+    "exports:generate": "../../../bin/pkg-utils exports-generate",
+    "postbuild": "run-s exports:generate",
     "prebuild": "yarn clean",
     "test": "jest",
     "watch": "../../../bin/pkg-utils bundle --target node --tsconfig tsconfig.lib.json --watch"
