--- a/packages/@sanity/validation/.npmignore
+++ b/packages/@sanity/validation/.npmignore
@@ -1,8 +1,11 @@
-.idea
-.babelrc
-.eslintrc
-.eslintignore
-test
-coverage
-yarn.lock
-tsconfig.tsbuildinfo
+/.babelrc
+/.depcheckignore.json
+/.eslintignore
+/.eslintrc
+/.idea
+/coverage
+/jest.config.js
+/scripts
+/test
+/tsconfig.json
+/tsconfig.lib.json
