--- a/packages/@sanity/default-login/.npmignore
+++ b/packages/@sanity/default-login/.npmignore
@@ -1,7 +1,11 @@
-.babelrc
-.editorconfig
-.eslintignore
-.eslintrc
-src
-test
-tsconfig.tsbuildinfo
+/.babelrc
+/.depcheckignore.json
+/.eslintignore
+/.eslintrc
+/.idea
+/coverage
+/jest.config.js
+/scripts
+/test
+/tsconfig.json
+/tsconfig.lib.json
