--- a/packages/@sanity/form-builder/.npmignore
+++ b/packages/@sanity/form-builder/.npmignore
@@ -1,7 +1,14 @@
-.idea
-example-app
-test
-src
-form-builder-old
-defs
-tsconfig.tsbuildinfo
+/.babelrc
+/.depcheckignore.json
+/.eslintignore
+/.eslintrc
+/.idea
+/coverage
+/jest.config.js
+/scripts
+/test
+/tsconfig.json
+/tsconfig.lib.json
+
+# custom
+/docs
