--- a/packages/@sanity/mutator/.npmignore
+++ b/packages/@sanity/mutator/.npmignore
@@ -1,3 +1,14 @@
-.idea
-flow-typed
-tsconfig.tsbuildinfo
+/.babelrc
+/.depcheckignore.json
+/.eslintignore
+/.eslintrc
+/.idea
+/coverage
+/jest.config.js
+/scripts
+/test
+/tsconfig.json
+/tsconfig.lib.json
+
+# custom
+/perf
