--- a/packages/@sanity/production-preview/.npmignore
+++ b/packages/@sanity/production-preview/.npmignore
@@ -1,4 +1,11 @@
-.babelrc
-src
-test
-tsconfig.tsbuildinfo
+/.babelrc
+/.depcheckignore.json
+/.eslintignore
+/.eslintrc
+/.idea
+/coverage
+/jest.config.js
+/scripts
+/test
+/tsconfig.json
+/tsconfig.lib.json
