--- a/packages/@sanity/util/.npmignore
+++ b/packages/@sanity/util/.npmignore
@@ -1,2 +1,11 @@
-src/
-tsconfig.tsbuildinfo
+/.babelrc
+/.depcheckignore.json
+/.eslintignore
+/.eslintrc
+/.idea
+/coverage
+/jest.config.js
+/scripts
+/test
+/tsconfig.json
+/tsconfig.lib.json
