WIP: test: add `smoke-test` script

--- a/package.json
+++ b/package.json
@@ -56,11 +56,13 @@
     "publish-canary": "RELEASE_TAG=canary yarn publish-tag",
     "publish-current-branch": "RELEASE_TAG=`git rev-parse --abbrev-ref HEAD | sed 's/\\//\\_/g'` yarn publish-tag",
     "publish-tag": "RELEASE_TAG=\"${RELEASE_TAG:-canary}\"; yarn build && lerna publish --canary --force-publish --no-git-tag-version --dist-tag=$RELEASE_TAG --preid=$RELEASE_TAG --exact",
+    "publish:tarball": "node -r esbuild-register scripts/publish/tarball",
     "release-notes": "node scripts/printReleaseNotesTemplate.js",
     "start": "yarn dev:test-studio",
     "test": "jest",
     "test-e2e": "start-server-and-test build-and-serve http://localhost:3333 'yarn cypress:run'",
     "test-perf": "start-server-and-test perf-studio http://localhost:3344 'ts-node -r dotenv/config perf/suite'",
+    "__wip_smoke-test:cli": "yarn build && yarn publish:tarball && node -r esbuild-register test/smoke-test/cli.ts",
     "type-check": "tsc --build",
     "updated": "lerna updated",
     "vercel-build": "yarn build:js && (cd dev/test-studio && yarn build -y)",
@@ -87,6 +89,7 @@
     "@types/node": "^14.18.9",
     "@types/react": "^17.0.42",
     "@types/styled-components": "^5.1.16",
+    "@types/tmp": "^0.2.3",
     "@types/yargs": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
@@ -142,6 +145,7 @@
     "rollup-plugin-typescript2": "^0.31.1",
     "semver": "^7.3.5",
     "start-server-and-test": "^1.14.0",
+    "tmp": "^0.2.1",
     "typescript": "^4.5.2",
     "yargs": "^17.3.0"
   },
