--- a/packages/@sanity/cli/package.json
+++ b/packages/@sanity/cli/package.json
@@ -39,6 +39,7 @@
   },
   "homepage": "https://www.sanity.io/",
   "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.0",
     "@sanity/client": "^3.2.0",
     "@sanity/generate-help-url": "^3.0.0",
     "@sanity/resolver": "2.29.5",
