--- a/packages/@sanity/cli/package.json
+++ b/packages/@sanity/cli/package.json
@@ -69,6 +69,7 @@
     "opn": "^5.2.0",
     "ora": "^5.4.1",
     "osenv": "^0.1.4",
+    "p-filter": "^2.1.0",
     "p-timeout": "^2.0.1",
     "promise-props-recursive": "^1.0.0",
     "resolve-from": "^4.0.0",
