fix(cli): separate worker thread logic into separate module
When the CLI is built into a single file, spawning a worker thread on
`__filename` won't work, as it will point to the entire CLI bundle.

This commit splits the child worker logic into a separate file and calls
it by resolving the path relative to the package root.

--- a/packages/@sanity/cli/package.json
+++ b/packages/@sanity/cli/package.json
@@ -86,6 +86,7 @@
     "ora": "^5.4.1",
     "p-filter": "^2.1.0",
     "p-timeout": "^4.0.0",
+    "pkg-dir": "^5.0.0",
     "promise-props-recursive": "^2.0.2",
     "recast": "^0.20.5",
     "resolve-from": "^5.0.0",
