--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -189,7 +189,8 @@
   "dependencies": {
     "@juggle/resize-observer": "^3.3.1",
     "@reach/auto-id": "^0.13.2",
-    "@sanity/asset-utils": "1.2.3",
+    "@portabletext/types": "^1.0.3",
+    "@sanity/asset-utils": "^1.2.3",
     "@sanity/bifur-client": "^0.0.8",
     "@sanity/client": "^3.2.0",
     "@sanity/color": "^2.1.8",
