--- a/packages/@sanity/import/package.json
+++ b/packages/@sanity/import/package.json
@@ -26,7 +26,7 @@
     "ndjson"
   ],
   "dependencies": {
-    "@sanity/asset-utils": "1.2.3",
+    "@sanity/asset-utils": "^1.2.3",
     "@sanity/generate-help-url": "^3.0.0",
     "@sanity/mutator": "2.29.3",
     "@sanity/uuid": "^3.0.1",
