--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dev:perf-studio": "yarn --cwd dev/perf-studio start",
     "dev:workspaces": "yarn --cwd dev/workspaces dev",
     "dev:starter-studio": "yarn --cwd dev/starter-studio dev",
+    "dev:strict-studio": "yarn --cwd dev/strict-studio dev",
     "dev:test-studio": "yarn --cwd dev/test-studio start",
     "dev:workshop": "yarn --cwd dev/workshop dev",
     "eslint": "eslint --ext=.js,.jsx,.mjs,.ts,.tsx --quiet",
