--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,7 @@
     {"path": "./packages/@sanity/types"},
     {"path": "./packages/@sanity/util"},
     {"path": "./packages/@sanity/validation"},
-    {"path": "./packages/@sanity/vision"}
+    {"path": "./packages/@sanity/vision"},
+    {"path": "./packages/sanity"},
   ]
 }
