chore: add `yarn etl` script

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dev:test-studio": "yarn --cwd dev/test-studio start",
     "dev:workshop": "yarn --cwd dev/workshop dev",
     "eslint": "eslint --ext=.js,.jsx,.mjs,.ts,.tsx --quiet",
+    "etl": "cd scripts/etl && node -r dotenv-flow/config -r esbuild-register main",
     "exports:check": "lerna run exports:check",
     "exports:clean": "lerna run exports:clean",
     "exports:generate": "lerna run exports:generate",
@@ -104,6 +105,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "boxen": "^4.1.0",
+    "cac": "^6.7.12",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "cpx": "^1.5.0",
@@ -113,11 +115,13 @@
     "del": "^6.0.0",
     "depcheck": "^1.4.3",
     "dotenv": "^10.0.0",
+    "dotenv-flow": "^3.2.0",
     "esbuild": "^0.14.31",
     "esbuild-register": "^3.3.2",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-sanity": "^6.0.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-es5": "^1.5.0",
