--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   ],
   "scripts": {
     "bootstrap": "yarn install && yarn build:cli",
-    "build": "lerna run --scope @sanity/* --scope sanity build",
-    "build:cli": "lerna run --scope '@sanity/{cli,client,core,export,import,mutator,server,types,util}' --scope sanity build",
-    "clean": "lerna run --scope @sanity/* --scope sanity clean && lerna clean",
+    "build": "tsc --build && lerna run --scope '{@sanity/*,sanity}' build",
+    "build:cli": "tsc --build && lerna run --scope '@sanity/{cli,client,core,export,import,mutator,server,types,util}' --scope sanity build",
+    "clean": "lerna run --scope '{@sanity/*,sanity}' clean",
     "check:versions": "node scripts/normalizeDependencyVersions.js",
     "cypress:open": "cypress open --config-file cypress/cypress.json",
     "cypress:run": "cypress run --config-file cypress/cypress.json",
@@ -45,6 +45,7 @@
     "exports:clean": "lerna run exports:clean",
     "exports:generate": "lerna run exports:generate",
     "init": "lerna clean --yes && run-s bootstrap build",
+    "lerna:clean": "lerna clean",
     "lint": "yarn eslint .",
     "lint:fix": "eslint . --quiet --fix",
     "lint-next": "yarn eslint `git diff --name-only next --diff-filter ACMRTUXB`",
@@ -68,7 +69,7 @@
     "updated": "lerna updated",
     "vercel-build": "yarn build:js && (cd dev/test-studio && yarn build -y)",
     "verify-format": "lerna run clean && yarn prettier -c",
-    "watch": "lerna run --parallel --scope @sanity/* --scope sanity watch"
+    "watch": "lerna run --parallel --scope '{@sanity/*,sanity}' watch"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
