--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -69,6 +69,7 @@
     "@juggle/resize-observer": "^3.3.1",
     "@portabletext/types": "^1.0.3",
     "@reach/auto-id": "^0.13.2",
+    "@rexxars/react-json-inspector": "^7.1.1",
     "@sanity/asset-utils": "^1.2.3",
     "@sanity/bifur-client": "^0.0.8",
     "@sanity/block-tools": "2.29.3",
@@ -119,7 +120,6 @@
     "react-fast-compare": "^3.2.0",
     "react-focus-lock": "^2.8.1",
     "react-is": "^17.0.2",
-    "react-json-inspector": "^7.1.1",
     "react-props-stream": "^1.0.0",
     "react-refractor": "^2.1.6",
     "react-rx": "^1.0.0-beta.6",
