--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "boxen": "^4.1.0",
     "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
     "cpx": "^1.5.0",
     "cypress": "^9.1.1",
     "cypress-dotenv": "^2.0.0",
