--- a/packages/@sanity/server/package.json
+++ b/packages/@sanity/server/package.json
@@ -37,6 +37,7 @@
     "@sanity/generate-help-url": "^3.0.0",
     "@vitejs/plugin-react": "^1.1.3",
     "chalk": "^4.1.2",
+    "connect-history-api-fallback": "^1.6.0",
     "debug": "^3.2.7",
     "esbuild-register": "^3.3.2",
     "module-alias": "^2.2.2",
