--- a/packages/@sanity/core/package.json
+++ b/packages/@sanity/core/package.json
@@ -42,6 +42,7 @@
     "chalk": "^2.4.2",
     "chokidar": "^3.0.0",
     "configstore": "^5.0.1",
+    "date-fns": "^2.16.1",
     "debug": "^3.2.7",
     "deep-sort-object": "^1.0.1",
     "es6-promisify": "^6.0.0",
