build: rename scripts

--- a/package.json
+++ b/package.json
@@ -33,12 +33,11 @@
     "dev:example-studio": "yarn --cwd dev/example-studio start",
     "dev:movies-studio": "yarn --cwd examples/movies-studio start",
     "dev:multi-source-studio": "yarn --cwd dev/multi-source-studio dev",
-    "dev:partless-studio": "yarn --cwd dev/partless-studio dev",
     "dev:perf-studio": "yarn --cwd dev/perf-studio start",
     "dev:workspaces": "yarn --cwd dev/workspaces dev",
     "dev:starter-studio": "yarn --cwd dev/starter-studio dev",
     "dev:strict-studio": "yarn --cwd dev/strict-studio dev",
-    "dev:test-studio": "yarn --cwd dev/test-studio start",
+    "dev:test-studio": "yarn --cwd dev/test-studio dev",
     "eslint": "eslint --ext=.js,.jsx,.mjs,.ts,.tsx --quiet",
     "etl": "cd scripts/etl && node -r dotenv-flow/config -r esbuild-register main",
     "exports:check": "lerna run exports:check",
