chore(deps): normalize versions

--- a/packages/@sanity/base/tsconfig.json
+++ b/packages/@sanity/base/tsconfig.json
@@ -18,6 +18,7 @@
     {"path": "../imagetool"},
     {"path": "../schema"},
     {"path": "../types"},
+    {"path": "../transaction-collator"},
     {"path": "../util/tsconfig.lib.json"},
     {"path": "../validation/tsconfig.lib.json"}
   ]
