--- a/packages/@sanity/core/package.json
+++ b/packages/@sanity/core/package.json
@@ -35,6 +35,7 @@
     "@sanity/import": "2.29.3",
     "@sanity/schema": "2.29.3",
     "@sanity/server": "2.29.5",
+    "@sanity/types": "2.29.5",
     "@sanity/util": "2.29.5",
     "@sanity/uuid": "^3.0.1",
     "chalk": "^4.1.2",
