refactor(core): migrate `mockBrowserEnvironment` to typescript

--- a/packages/@sanity/core/tsconfig.json
+++ b/packages/@sanity/core/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../../tsconfig.settings",
-  "include": ["./src", "./test"],
+  "include": ["./src", "./test", "./typings"],
   "compilerOptions": {
     "composite": true,
     "declarationDir": "./lib/dts/",
