--- a/packages/@sanity/core/package.json
+++ b/packages/@sanity/core/package.json
@@ -43,6 +43,7 @@
     "configstore": "^5.0.1",
     "debug": "^3.2.7",
     "deep-sort-object": "^1.0.1",
+    "esbuild-register": "^3.3.2",
     "execa": "^2.0.0",
     "fs-extra": "^7.0.0",
     "get-it": "^5.2.1",
@@ -73,7 +74,11 @@
     "@types/resolve-from": "^4.0.0",
     "@types/rimraf": "^3.0.2",
     "@types/semver": "^6.2.3",
-    "@types/tar-fs": "^2.0.1"
+    "@types/tar-fs": "^2.0.1",
+    "sanity": "2.29.3"
+  },
+  "peerDependencies": {
+    "sanity": "^2.29.3"
   },
   "repository": {
     "type": "git",
