chore: rename "publish" script to "publish-purple-unicorn"
Lerna will run the "publish"-script as defined in package.json upon publishing the packages, so having a publish that invokes lerna caused lerna to enter a publish loop. Renaming to "publish-purple-unicorn"

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "postinstall": "husky install",
     "prettier": "prettier '**/*.{ts,js,tsx,jsx}'",
     "prettify": "lerna run clean && yarn prettier --write",
-    "publish": "RELEASE_TAG=purple-unicorn yarn publish-tag",
+    "publish-purple-unicorn": "RELEASE_TAG=purple-unicorn yarn publish-tag",
     "publish-when-v3-is-ready": "yarn build && lerna publish --exact",
     "publish-canary": "RELEASE_TAG=canary yarn publish-tag",
     "publish-current-branch": "RELEASE_TAG=`git rev-parse --abbrev-ref HEAD | sed 's/\\//\\_/g'` yarn publish-tag",
