--- a/packages/@sanity/vision/package.json
+++ b/packages/@sanity/vision/package.json
@@ -56,8 +56,8 @@
   "peerDependencies": {
     "@sanity/base": "^2.21.0",
     "prop-types": "^15.6 || ^16",
-    "react": "^16.9 || ^17",
-    "react-dom": "^16.9 || ^17",
+    "react": "^16.9 || ^17 || ^18",
+    "react-dom": "^16.9 || ^17 || ^18",
     "styled-components": "^5.2.0"
   },
   "repository": {
