--- a/packages/@sanity/color-input/package.json
+++ b/packages/@sanity/color-input/package.json
@@ -71,7 +71,7 @@
     "@sanity/form-builder": "^2.27",
     "@sanity/types": "^2.14",
     "prop-types": "^15.6 || ^16",
-    "react": "^16.9 || ^17",
+    "react": "^16.9 || ^17 || ^18",
     "styled-components": "^5.2.0"
   },
   "bugs": {
