--- a/packages/@sanity/dashboard/package.json
+++ b/packages/@sanity/dashboard/package.json
@@ -39,7 +39,7 @@
   "peerDependencies": {
     "@sanity/base": "^2.0.0",
     "prop-types": "^15.6 || ^16",
-    "react": "^16.9 || ^17",
+    "react": "^16.9 || ^17 || ^18",
     "styled-components": "^5.2.0"
   },
   "repository": {
