--- a/packages/@sanity/import/package.json
+++ b/packages/@sanity/import/package.json
@@ -4,7 +4,7 @@
   "description": "Import documents to a Sanity dataset",
   "main": "./lib/import.js",
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=14.0.0"
   },
   "author": "Sanity.io <hello@sanity.io>",
   "license": "MIT",
@@ -31,7 +31,6 @@
     "@sanity/uuid": "^3.0.1",
     "debug": "^3.2.7",
     "file-url": "^2.0.2",
-    "fs-extra": "^7.0.0",
     "get-it": "^5.2.1",
     "get-uri": "^2.0.2",
     "globby": "^10.0.0",
@@ -41,15 +40,13 @@
     "mississippi": "^4.0.0",
     "p-map": "^1.2.0",
     "peek-stream": "^1.1.2",
+    "rimraf": "^3.0.2",
     "split2": "^3.2.2",
-    "tar-fs": "^2.1.1",
-    "tempy": "^0.3.0",
-    "whatwg-url": "^7.0.0"
+    "tar-fs": "^2.1.1"
   },
   "devDependencies": {
     "@sanity/client": "^3.3.2",
-    "nock": "^9.0.5",
-    "rimraf": "^3.0.2"
+    "nock": "^9.0.5"
   },
   "repository": {
     "type": "git",
