--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -106,6 +106,7 @@
     "@types/speakingurl": "^13.0.3",
     "attr-accept": "^1.1.0",
     "classnames": "^2.2.5",
+    "color2k": "^2.0.0",
     "dataloader": "^2.0.0",
     "date-fns": "^2.26.1",
     "debug": "^3.2.7",
